# mapisse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: refresh_data.py
src/mapisse/: app.py  config.py
src/mapisse/data/: cache.py  wikidata.py
src/mapisse/map/: renderer.py
