[project]
name = "mapisse"
version = "0.1.0"
description = "Famous artworks on a world map, powered by Wikidata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "streamlit-folium>=0.23.0",
    "folium>=0.18.0",
    "polars>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
